Fixed display text and popover for licenses and attribution
1. Fixed display text.

2. Fixed popover hidden
The popover is not visible because styling from bootstrap v5.1.1 conflicted with reactjs bootstrap popover (v0.32.3, Bootstrap 3) currently used.  A visible popover in clearlyDefined UI is styled with "fade in popover left" classes. The following style from bootstrap v5.1.1 hides the popover because the popover does not have "show" class:
.fade:not(.show) {
    opacity: 0;
}
Turn off animation for popover so the conflicting styling will not be effective.

3.  The tool list is displayed in its entirety in "Tools" section.  Popover contains only duplicate information and seems redundant.  Removed ListDataRenderer to avoid pop up.

Task: https://github.com/clearlydefined/website/issues/950

--- a/src/styles/_Popover.scss
+++ b/src/styles/_Popover.scss
@@ -51,6 +51,7 @@
   text-overflow: ellipsis;
   width: 100%;
   display: block;
+  cursor: pointer;
 }
 
 
